--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,16 @@
         --padding-1: 1.2rem;
         --box-shadow: 0 2rem 3rem var(--color-light);
     }
+    /* ------------- DARK THEM VARIABLES ---------------- */
+    
+    .dark-theme-variables {
+        --color-background: #181a1e;
+        --color-white: #202528;
+        --color-dark: #edeffd;
+        --color-dark-variant: #a3bdcc;
+        --color-light: rgba(0, 0, 0, 0.4);
+        --box-shadow: 0 2rem 3rem var(--color-light)
+    }
     
     * {
         margin: 0;
@@ -512,6 +522,11 @@
         justify-content: center;
     }
     
+    .right .sales-analytics .add-product:hover {
+        background: var(--color-primary);
+        color: white;
+    }
+    
     .right .sales-analytics .add-product div {
         display: flex;
         align-items: center;
@@ -573,7 +588,7 @@
         }
         aside {
             position: fixed;
-            left: 0;
+            left: -100%;
             background: var(--color-white);
             width: 18rem;
             z-index: 3;
@@ -581,6 +596,12 @@
             height: 100vh;
             padding-right: var(--card-padding);
             display: none;
+            animation: showMenu 400ms ease forwards;
+        }
+        @keyframes showMenu {
+            to {
+                left: 0;
+            }
         }
         aside .logo {
             margin-left: 1rem;
